--- a/IT2805 - Webteknologi/Assignment6/css/styles.css
+++ b/IT2805 - Webteknologi/Assignment6/css/styles.css
@@ -35,4 +35,6 @@ fieldset {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
+    max-width: 500px;
+    margin: auto;
 }
