We all self-conscious. I'm just the first to admit it.

--- a/IT2810 - Webutvikling/P1/styles.css
+++ b/IT2810 - Webutvikling/P1/styles.css
@@ -109,6 +109,10 @@ button:hover {
   fill: #086DAC
 }
 
+#svgChameleon {
+  cursor: pointer;
+}
+
 
 @media screen and (max-width: 1500px) {
   #content-grid {
